# zentinel-agent-denylist

./: .gitignore  Cargo.toml  Dockerfile  README.md  sentinel-agent.toml  zentinel-agent.toml
.github/workflows/: ci.yml  release.yml
src/: main.rs
